--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,12 @@
   "author": "Harsh",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.15.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "googleapis": "^140.0.1"
+    "googleapis": "^140.0.1",
+    "node-fetch": "^2.7.0",
+    "node-fetch-polyfill": "^2.0.6",
+    "openai": "^4.52.7"
   }
 }
